# SkillLoops

./: .env.example  .gitignore  PRD.md  README.md  instrumentation.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/console/: page.tsx  personas.ts
app/deck/: page.tsx
app/demo/: page.tsx
app/market/: page.tsx
app/me/: page.tsx
app/pitch/: page.tsx
app/publish/: page.tsx
app/reflection-skill/: page.tsx
app/submit/: page.tsx
components/brutalist/: Btn.tsx  Chip.tsx  DataPlate.tsx  LabeledBox.tsx  MonoId.tsx  PeriodCountdown.tsx  Rule.tsx  (+4 more)
docs/: hackathon-video-script.md
lib/: api-client.ts  api-helpers.ts  bootstrap-config.ts  bootstrap.ts  browser-irys.ts  db.ts  indexer.ts  judge-client.ts  personas.ts  schemas.ts  services.ts  storage.ts  units.ts  wallet.ts
programs/: Anchor.toml  Cargo.toml  rust-toolchain.toml
programs/slp/: Cargo.toml
programs/slp/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs
programs/slp/src/instructions/: claim_revenue.rs  evaluate_experience.rs  initialize_protocol.rs  mod.rs  publish_new_version.rs  publish_skill.rs  settle_period.rs  submit_experience.rs  subscribe.rs
programs/slp/src/state/: config.rs  experience.rs  mod.rs  revenue.rs  shares.rs  skill.rs  subscription.rs
programs/slp/tests/: adversarial.rs  golden_flow.rs
programs/slp/tests/common/: fixtures.rs  mod.rs
scripts/: demo-personas.ts  deploy-devnet.sh  init-protocol.ts  seed-devnet.ts
(+102 files in other folders)
