[package]
name = "slp"
version = "0.1.0"
edition = "2021"
description = "Skill Loops Protocol"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "slp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2"
anchor-lang = { version = "0.31.1", features = ["idl-build"] }
borsh = "1"
sha2 = "0.10"
